# channel-attention

./: LICENSE  README.md  pyproject.toml
channel_attention/: run.py  train_test.py
channel_attention/datamodules/: __init__.py  base.py  bcic.py  bcic3.py  bcic4.py  bcic4_2a.py  bcic4_2b.py  hgd.py
channel_attention/models/: __init__.py  atcnet.py  attention_blocks.py  basenet.py  classification_module.py  eegconformer.py  eegnet.py  eegtcnet.py  modules.py  shallownet.py  ts-seffnet_filter.mat  tsseffnet.py
channel_attention/utils/: get_datamodule_cls.py  get_model_cls.py  interaug.py  load_bcic.py  load_bcic3.py  load_bcic4.py  load_hgd.py  lr_scheduler.py  seed.py  weight_initialization.py
configs/: bcic2a_atcnet.yaml  bcic2a_basenet.yaml  bcic2a_eegconformer.yaml  bcic2a_eegnet.yaml  bcic2a_eegtcnet.yaml  bcic2a_shallownet.yaml  bcic2a_tsseffnet.yaml  bcic2b_atcnet.yaml  bcic2b_basenet.yaml  bcic2b_eegconformer.yaml  bcic2b_eegnet.yaml  bcic2b_eegtcnet.yaml  bcic2b_shallownet.yaml  bcic2b_tsseffnet.yaml  bcic3_atcnet.yaml  bcic3_basenet.yaml  bcic3_eegconformer.yaml  bcic3_eegnet.yaml  bcic3_eegtcnet.yaml  bcic3_shallownet.yaml  hgd_atcnet.yaml  hgd_basenet.yaml  hgd_eegconformer.yaml  hgd_eegnet.yaml  hgd_eegtcnet.yaml  hgd_shallownet.yaml  hgd_tsseffnet.yaml
